Generate a maven project (pom.xml)